# coalesce

./: .gitignore  CMakeLists.txt  README.md
BitStore/: CMakeLists.txt
BitStore/cmake/: BitStorePackageConfig.cmake.in
BitStore/inc/: bitstore.h  bitstore.hpp  bytestore.hpp
BitStore/lib/cmake/bitstore/: BitStorePackage.cmake  BitStorePackageConfig.cmake
BitStore/src/: main.cpp
BitStore/testing/: test.cpp
Coalesce/: CMakeLists.txt
Coalesce/src/: main.cpp
bytestore/: CMakePresets.json  main.cpp
bytestore/cmake/: ByteStorePackageConfig.cmake.in
bytestore/inc/: bytestore.hpp
bytestore/include/: bytestore.hpp
bytestore/lib/cmake/bytestore/: ByteStorePackage.cmake
bytestore/src/: main.cpp
bytestore/testing/: test.cpp
inc/: huffer.hpp
include/: bitstore.hpp  bytestore.hpp
lib/cmake/bitstore/: BitStorePackage-debug.cmake  BitStorePackage.cmake
lib/cmake/bytestore/: ByteStorePackage-debug.cmake  ByteStorePackage.cmake  ByteStorePackageConfig.cmake
src/: huffer.cpp  main.cpp
testing/: b.csc  bp2.txt  tests.cpp  tests.hpp  x.csc  y.csc
